# ai-restaurant

apps/restaurant-api/: main.py  pyproject.toml
